Changes to version 2.4-0

  o The R Commander editor for Markdown and knitr documents is now a non-modal dialog, so may remain open while you work.
  
Changes to Version 2.3-1

  o Removed dependency of rglwidgets, no longer necessary.
  
  o Fixes to Catalan translation (from Manel Salamero).
  
  o Updated Basque translation (thanks to Joserra Rueda).

Changes to Version 2.3-0

  o Added .rtf output to options for RMarkdown reports.
  
  o Added bootstrap dialog for "lm"s and "glm"s.
  
  o Added delta-method dialog.
  
  o Added view data dialog, supporting viewing a subset of the active data set, and sort data set dialog (suggestions of Sung-il Cho).
  
  o Added connect option to plot means dialog (suggestion of Graham Smith).
  
  o Added Welch F-test option to one-way ANOVA dialog.
  
  o Added compare coefficients dialog.
  
  o The Shapiro-Wilk test for normality dialog is replaced by a more general normality-tests dialog.
  
  o Dialogs for plotting continuous distributions now allow the user to specify regions to fill.
  
  o Various small improvements/bug fixes.
  
  o Updated translations (with thanks): Catalan (Manel Salamero), French (Milan Bouchet-Valat), Indonesian (I Made Tirta), Japanese(Takaharu Araki), Polish (Lukasz Daniel), Romanian (Adrian Dusa), Russian (Alexey Shipunov), Spanish (Manuel Munoz Marquez).
  
  o Updated Japanese getting-started manual (courtesy of Takaharu Araki).
  
  
Changes to Version 2.2-5

  o Fixed data editor to work properly with NAs in existing data sets.


Changes to Version 2.2-4

  o Corrected Slovenian translation (by Matjaz Jeran).
  
  o Embeds 3D rgl graphs in HTML output from R Markdown.
  
  o Improvements to the Rcmdr data editor.
  
  o New version of ismdi() doesn't need compiled code (thanks to Duncan Murdoch), eliminating all compiled code from the Rcmdr package.
  
  o showData() data set displays now updated automatically.
  
  o Small improvements and bug fixes.
  

Changes to Version 2.2-3
