@@ -2,6 +2,10 @@ Changes to version 2.4-0
 
   o The R Commander editor for Markdown and knitr documents is now a non-modal dialog, so may remain open while you work.
   
+  o Improvement to the barplot dialog (suggestions of Beatriz Lacruz).
+  
+  o Allow color selection in pie charts.
+  
 Changes to Version 2.3-1
 
   o Removed dependency of rglwidgets, no longer necessary.
